# parquet-tool

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml
inc/: file.h  log.h  mqtt.h  parquet.h  schema.h
src/: entry.cpp  file.cpp  log.cpp  mqtt.cpp  parquet.cpp  parquet2bin.cpp  schema.cpp  test_parquet.cpp
